Replaced fix feature with alignbox groups

--- a/scss/core/structures/_alignbox.scss
+++ b/scss/core/structures/_alignbox.scss
@@ -16,6 +16,10 @@ $sl-generate-alignbox: $sl-generate !default;
 /// @type String
 $sl-alignbox-selector: sl-module('alignbox') !default;
 
+/// The alignbox group module selector
+/// @type String
+$sl-alignbox-group-selector: sl-module('aligngroup') !default;
+
 /// The alignbox box module selector
 /// @type String
 $sl-alignbox-box-selector: sl-module('box') !default;
@@ -26,6 +30,7 @@ $sl-alignbox-box-selector: sl-module('box') !default;
 
 @include sl-assert($sl-generate-alignbox, 'bool');
 @include sl-assert($sl-alignbox-selector, 'string');
+@include sl-assert($sl-alignbox-group-selector, 'string');
 @include sl-assert($sl-alignbox-box-selector, 'string');
 
 
@@ -60,7 +65,6 @@ $sl-alignbox-box-selector: sl-module('box') !default;
 
 	$v-align: if($v-align == 'center', middle, $v-align);
 
-	position: relative;
 	width: 100%;
 	height: 100%;
 	word-spacing: -1em; // Remove spacing between items
@@ -86,21 +90,9 @@ $sl-alignbox-box-selector: sl-module('box') !default;
 }
 
 ///
-/// @param {String} $fix [none]
 /// @output
-@mixin sl-alignbox-box($fix: none) {
-
-	@if $fix == top or $fix == bottom {
-		position: absolute;
-		left: 0;
-		right: 0;
-		#{unquote($fix)}: 0;
-		display: block;
-
-	} @else {
-		display: inline-block;
-	}
-
+@mixin sl-alignbox-box {
+	display: inline-block;
 	white-space: normal;
 	text-align: inherit;
 }
@@ -120,24 +112,6 @@ $sl-alignbox-box-selector: sl-module('box') !default;
 		> *,
 		> #{$sl-alignbox-box-selector} {
 			@include sl-alignbox-box;
-		}
-
-		> #{$sl-alignbox-box-selector} {
-
-			@include sl-parameter('fix-top', 'fix-bottom') {
-				position: absolute;
-				left: 0;
-				right: 0;
-				display: block;
-			}
-
-			@include sl-parameter('fix-top') {
-				top: 0;
-			}
-
-			@include sl-parameter('fix-bottom') {
-				bottom: 0;
-			}
 		}
 
 		@include sl-parameter('h-align-left') {
@@ -194,6 +168,46 @@ $sl-alignbox-box-selector: sl-module('box') !default;
 			&:after,
 			> #{$sl-alignbox-box-selector} {
 				vertical-align: middle;
+			}
+		}
+	}
+
+	#{$sl-alignbox-group-selector} {
+		position: relative;
+		width: 100%;
+		height: 100%;
+
+		> #{$sl-alignbox-selector} {
+			position: absolute;
+			top: 0;
+			left: 0;
+
+			@include sl-parameter('h-contain') {
+				left: (100% / 3);
+				width: (100% / 3);
+
+				@include sl-parameter('h-align-left') {
+					left: 0;
+				}
+
+				@include sl-parameter('h-align-right') {
+					left: auto;
+					right: 0;
+				}
+			}
+
+			@include sl-parameter('v-contain') {
+				top: (100% / 3);
+				height: (100% / 3);
+
+				@include sl-parameter('v-align-top') {
+					top: 0;
+				}
+
+				@include sl-parameter('v-align-bottom') {
+					top: auto;
+					bottom: 0;
+				}
 			}
 		}
 	}
